--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <div class="row">
             <div class="col-lg-12-title">
                 <h1>Crystals Collector!</h1>
-                <!--<br>-->
             </div>
 
             <div class="row">
@@ -37,25 +36,26 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-9-random"></div>
-                <p id="random-number"></p>
-                <div class="col-md-3-tally"></div>
-                <p id="wins-text">Wins: </p>
-                <p id="losses-text">Losses: </p>
+            <div class="row" style="height:50%">
+                <div class="card" style="width:60%">
+                    <div class="col-md-9-random"></div>
+                    <p id="random-number"></p>
+                    <div class="col-md-3-tally"></div>
+                    <p id="wins-text">Wins: </p>
+                    <p id="losses-text">Losses: </p>
+                </div>
             </div>
 
             <br>
 
             <div class="row">
                 <div class="col-md-12">
-                    <input type="image" class="jewels" src="assets/images/363797.png"
+                    <input type="image" class="ruby" src="assets/images/363797.png" style="width:100px; height:100px;">
+                    <input type="image" class="amethyst" src="assets/images/550798.png"
                         style="width:100px; height:100px;">
-                    <input type="image" class="jewels" src="assets/images/550798.png"
+                    <input type="image" class="diamond" src="assets/images/363851.jpg"
                         style="width:100px; height:100px;">
-                    <input type="image" class="jewels" src="assets/images/363851.jpg"
-                        style="width:100px; height:100px;">
-                    <input type="image" class="jewels" src="assets/images/363846.png"
+                    <input type="image" class="emerald" src="assets/images/363846.png"
                         style="width:100px; height:100px;">
                 </div>
             </div>
